[gd_scene load_steps=5 format=3 uid="uid://d1nen40727g4g"]

[ext_resource type="Texture2D" uid="uid://k17nxhtb2fbo" path="res://assets/GunsPack/Bullets/PistolAmmoSmall.png" id="1_jrfst"]
[ext_resource type="Script" path="res://scripts/tiro.gd" id="1_lvv3x"]

[sub_resource type="SpriteFrames" id="SpriteFrames_phc4v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_jrfst")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h4pa2"]
size = Vector2(6, 4)

[node name="tiro" type="AnimatedSprite2D"]
position = Vector2(1, -5.72205e-06)
sprite_frames = SubResource("SpriteFrames_phc4v")
script = ExtResource("1_lvv3x")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 5.72205e-06)
shape = SubResource("RectangleShape2D_h4pa2")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
